--- a/css/mycss.css
+++ b/css/mycss.css
@@ -8,10 +8,25 @@ h1{
     text-align: justify
 }
 .img-slides{
-    max-width: 600px;
+    max-width: 30%;
+    min-width: 25%;
     margin-left: 3%;
+    margin-top: 2%;
 }
 
 .img-fluid{
+    margin-top:5%;
+}
+
+#accordion{
     margin-top:2%;
+}
+
+.titulo-slide{
+    font-size: 2.25rem;
+    color: #3b3b3b;
+    font-weight: bold;
+    text-align: justify;
+    
+    
 }
